# SOLAR303-

./: .gitignore  CMakeLists.txt  README_BUILD.md  checkpoint.ps1  index.html  script.js  server.js
.claude/: launch.json
CHECKPOINT_2026-03-21_08-35/: CMakeLists.txt
CHECKPOINT_2026-03-21_08-35/Source/: DiodeLadderFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SOLAR303Engine.cpp  SOLAR303Engine.h  SOLAR303Sequencer.cpp  SOLAR303Sequencer.h
CHECKPOINT_2026-03-21_08-35/Source/Skins/: DarkGray.skin
CHECKPOINT_2026-03-21_08-35/landing/: style.css
Scripts/: build_mac.sh  build_windows.bat  mac_installer.sh  windows_installer.iss
Source/: ActivationScreen.cpp  ActivationScreen.h  DiodeLadderFilter.cpp  FactoryPresets.h  LicenseManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SOLAR303Engine.cpp  SOLAR303Engine.h  SOLAR303Sequencer.cpp
Source/Skins/: Black.skin  LightGray.skin  Red.skin  SkinManager.h  Yellow.skin
landing/: index.html  style.css
landing/.claude/: launch.json
landing_updated_check/: style.css
landing_updated_check/.claude/: launch.json
